--- a/display.kv
+++ b/display.kv
@@ -1,40 +1,54 @@
 #:kivy 1.0.9
-#-*- coding: utf-8 -*-
+
+WindowManager:
+    CustomerWindow:
+    StoreWindow:
+    CalculatorWindow:
+    NFCWindow:
 
 
 <Widget>:
     font_name: '/usr/share/fonts/truetype/takao-gothic/TakaoPGothic.ttf'
 
 
-<CustomerScreen>:
+<CustomerWindow>:
+    name: 'customer'
     BoxLayout:
         orientation: 'horizontal'
         BoxLayout:
             orientation: 'vertical'
             Button:
                 text: '支払う'
-                on_press: root.manager.current = 'calculator'
+                on_release: 
+                    app.root.current = 'calculator'
+                    root.manager.transition.direction = 'down'
             Button:
                 text: 'チャージする'
-                on_press: root.manager.current = 'calculator'
+                on_release: 
+                    app.root.current = 'calculator'
+                    root.manager.transition.direction = 'down'
         Button:
             text: '店舗用ページへ'
-            on_press: root.manager.current = 'store'
+            on_release: 
+                app.root.current = 'store'
+                root.manager.transition.direction = 'left'
 
-
-<StoreScreen>:
+<StoreWindow>:
+    name: 'store'
     BoxLayout:
         Button:
             text: '売上の確認'
         Button:
             text: '販売者ページへ'
-            on_press: root.manager.current = 'customer'
+            on_release: 
+                app.root.current = 'customer'
+                root.manager.transition.direction = 'right'
 
-
-<CalculatorScreen>:
+<CalculatorWindow>:
+    name: 'calculator'
     BoxLayout:
         orientation: 'vertical'
-        display: display_input
+        id: bl_cal
 
         Label:
             text: '金額を入力してください'
@@ -45,46 +59,68 @@
             orientation: 'horizontal'
             Button:
                 text: '前のページへ戻る'
-                on_press: root.manager.current = 'customer'
-            NumKey:
+                on_release: 
+                    root.manager.current = 'customer'
+                    root.manager.transition.direction = 'up'
+            GridLayout:
+                cols: 3
+                rows: 4
 
+                NumberButton:
+                    text: '7'
+                    on_release: root.print_number(self.text)
+                NumberButton:
+                    text: '8'
+                    on_release: root.print_number(self.text)
+                NumberButton:
+                    text: '9'
+                    on_release: root.print_number(self.text)
 
-<NumKey@GridLayout>:
-    cols: 3
-    rows: 4
+                NumberButton:
+                    text: '4'
+                    on_release: root.print_number(self.text)
+                NumberButton:
+                    text: '5'
+                    on_release: root.print_number(self.text)
+                NumberButton:
+                    text: '6'
+                    on_release: root.print_number(self.text)
 
-    NumberButton:
-        text: '7'
-    NumberButton:
-        text: '8'
-    NumberButton:
-        text: '9'
+                NumberButton:
+                    text: '1'
+                    on_release: root.print_number(self.text)
+                NumberButton:
+                    text: '2'
+                    on_release: root.print_number(self.text)
+                NumberButton:
+                    text: '3'
+                    on_release: root.print_number(self.text)
 
-    NumberButton:
-        text: '4'
-    NumberButton:
-        text: '5'
-    NumberButton:
-        text: '6'
-
-    NumberButton:
-        text: '1'
-    NumberButton:
-        text: '2'
-    NumberButton:
-        text: '3'
-
-    ClearButton:
-        text: 'C'
-    NumberButton:
-        text: '0'
-    Button:
-        text: 'Enter'
+                ClearButton:
+                    text: 'C'
+                    on_release: root.clear_display()
+                NumberButton:
+                    text: '0'
+                    on_release: root.print_number(self.text)
+                Button:
+                    text: 'Enter'
+                    on_release: 
+                        root.press_enter()
+                        root.manager.current = 'nfc'
+                        root.manager.transition.direction = 'left'
 
 
 <NumberButton@Button>:
-    # on_press: app.root.ids['CalculatorScreen'].print_number(self.text)
+
 
 
 <ClearButton@Button>:
-    # on_press: app.root.ids['CalculatorScreen'].clear_display()
+
+
+<NFCWindow>:
+    name: 'nfc'
+    BoxLayout:
+        orientation: 'vertical'
+        Label:
+            text: '学生証をかざしてください'
+        
